--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -47,6 +47,12 @@ jobs:
                     # Prefix the list here with "+" to use these queries and those in the config file.
                     # queries: ./path/to/local/query, your-org/your-repo/queries@main
 
+            # Set up JDK 1.11
+            -   name: Set up JDK 1.11
+                uses: actions/setup-java@v1
+                with:
+                    java-version: '11.x'
+            
             # Autobuild attempts to build any compiled languages  (C/C++, C#, or Java).
             # If this step fails, then you should remove it and run the build manually (see below)
             -   name: Autobuild
@@ -62,11 +68,6 @@ jobs:
             #- run: |
             #   make bootstrap
             #   make release
-
-            -   name: Set up JDK 1.11
-                uses: actions/setup-java@v1
-                with:
-                    java-version: '11.x'
 
             -   name: Perform CodeQL Analysis
                 uses: github/codeql-action/analyze@v1
