--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>nba-stats</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>nba-stats</name>
-    <description>Demo project for Spring Boot</description>
+    <description>Send NBA Stats to Telegram channel</description>
 
     <properties>
         <java.version>11</java.version>
