--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
             <groupId>com.antoineguay</groupId>
             <artifactId>nbawrapper</artifactId>
             <version>0.0.6</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
